[gd_scene load_steps=37 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/BossShip1-Sheet.png" type="Texture" id=2]
[ext_resource path="res://bullet/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://EnemyProgressBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sound/zap2.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sound/hurt.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sprites/Enemyship2-Sheet.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/EnemyShip1-Sheet.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "Boss",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "alternate",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "Hit"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.721569, 0.054902, 0.415686, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=12]
radius = 13.3107

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 35
script = ExtResource( 1 )
bullet_scene = ExtResource( 3 )
start_hp = 10

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
frame = 7
playing = true

[node name="shootTimer" type="Timer" parent="."]

[node name="rotator" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hit = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.5, 1 )
shape = SubResource( 2 )

[node name="ProgressBar" parent="." instance=ExtResource( 4 )]
margin_left = -21.375
margin_top = -36.0
margin_right = 35.625
margin_bottom = -22.0
rect_scale = Vector2( 0.75, 0.5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -17.18

[node name="GunFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="DeadFX" type="AudioStreamPlayer2D" parent="."]

[node name="EnemySight" type="Area2D" parent="."]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemySight"]
scale = Vector2( 20, 20 )
shape = SubResource( 12 )

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true
[connection signal="setMaxHp" from="." to="ProgressBar" method="_on_Enemy_setMaxHp"]
[connection signal="tookDamage" from="." to="ProgressBar" method="_on_Enemy_tookDamage"]
[connection signal="timeout" from="shootTimer" to="." method="_on_shootTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="EnemySight" to="." method="_on_EnemySight_body_entered"]
[connection signal="body_exited" from="EnemySight" to="." method="_on_EnemySight_body_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
